--- a/csc207/src/main/lineChart.html
+++ b/csc207/src/main/lineChart.html
@@ -43,7 +43,7 @@
         yvalues.push(month);
         const value = columns[1];
         yvalues.push(parseFlaoat(value));
-        console.log(month, temp);
+        console.log(month, value);
       });
       return {xvalues, yvalues}
     }
